# cnn-feature-map-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: github_issues_preview.md  implementation_plan.md  tutorial_outline.md
notebooks/: 01_manual_filters.ipynb  02_conv2d_pooling.ipynb  02b_tiny_orientation_cnn.ipynb  03_tiny_cifar10_cnn.ipynb  04_feature_map_inspection.ipynb  05_pretrained_comparison.ipynb
outputs/day02b_tiny_orientation_cnn/: training_history.csv
src/cnn_feature_map_lab/: __init__.py  cuda_smoke.py  device.py  paths.py  tiny_cnn.py  visualization.py
tests/: test_paths.py  test_tiny_cnn.py
