[project]
name = "cnn-feature-map-lab"
version = "0.1.0"
description = "A 5-day PyTorch lab for understanding image CNNs and feature maps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "jupyter>=1.1.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnn_feature_map_lab"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
